topdir = @DC_DATADIR@
dist_top_DATA = \
    index

stagedir = @DC_DATADIR@/stage
dist_stage_DATA = \
    stage/stage001 \
    stage/stage002 \
    stage/stage003 \
    stage/stage004 \
    stage/stage005 \
    stage/stage006 \
    stage/stage007 \
    stage/stage008 \
    stage/stage009 \
    stage/stage010

imagedir = @DC_DATADIR@/image
dist_image_DATA = \
    image/gameover.png \
    image/gameclear.png \
    image/background.png \
    image/racket.png \
    image/ball.png \
    image/laver.png \
    image/naruto-30.png \
    image/naruto-50.png \
    image/naruto-70.png \
    image/naruto-90.png \
    image/forcefield-50.png \
    image/forcefield-70.png \
    image/forcefield-90.png \
    image/gonion-65.png \
    image/gonion-90.png \
    image/gonion-125.png \
    image/egg-70.png \
    image/egg-90.png \
    image/egg-120.png \
    image/chashao-70.png \
    image/chashao-90.png \
    image/chashao-125.png \
    image/mianma-115x90.png \
    image/mianma-80x60.png

