bin_PROGRAMS = droplet-collection

droplet_collection_CPPFLAGS = -std=c++98 -W -Wall -g -O0 -DDC_DATADIR="\"@DC_DATADIR@\"" @gtkmm_CFLAGS@
droplet_collection_LDADD    = -lm @gtkmm_LIBS@
droplet_collection_SOURCES  = \
    main.cpp \
    object-manager.hpp \
    object-manager.cpp \
    object-field.hpp \
    object-field.cpp \
    object-polygon.hpp \
    object-polygon.cpp \
    object-forcefield.hpp \
    object-forcefield.cpp \
    object-flicker.hpp \
    object-flicker.cpp \
    object-racket.hpp \
    object-racket.cpp \
    object-ball.hpp \
    object-ball.cpp \
    object-splitter.hpp \
    object-splitter.cpp \
    object-droplet.hpp \
    object-droplet.cpp \
    object-globule.hpp \
    object-globule.cpp \
    object-circle.hpp \
    object-circle.cpp \
    object-objectbase.hpp \
    object-objectbase.cpp \
    settingfile.hpp \
    settingfile.cpp \
    vector.hpp \
    float.hpp \
    error.hpp
